5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1807_2569.log
== TEST (2019-06-06 16:47:44) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:48:35) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:48:55) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:50:18) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	d = sqrt(vet[i] - media) ** 2
	i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:50:41) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	d = sqrt(vet[i] - media) ** 2
	print(d)
	i = i + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:52:03) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	d = (vet[i] - media) ** 2
	print(d)
	i = i + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:52:29) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	d = (vet[i] - media) ** 2
	i = i + 1
	
print(d)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:52:53) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
print(d)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:53:00) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
print(vet)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:54:10) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
print(round(sum(sqrt(vet)/size(vet) - 1), 3))	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:55:42) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
print(sum(vet))	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:57:23) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
s2 = sum(vet / size(vet) - 1)
print(s2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:57:40) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
s2 = sum(vet / size(vet) - 1)
print(sqrt(s2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:57:56) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
s2 = sum(vet)
print(s2
	
-- ERROR:
File "XXXX", line 16
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:57:58) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
s2 = sum(vet)
print(s2)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:58:26) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
s2 = sum(vet)/ size(vet)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:59:09) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
s = sum(vet)
soma = s / size(vet)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:59:16) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
s = sum(vet)
soma = s / size(vet)
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:59:35) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
s = sum(vet)
soma = s / size(vet) - 1 
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:59:45) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
s = sum(vet)
soma = s / (size(vet) - 1) 
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:00:24) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
s2 = sum(vet) / (size(vet) - 1)
 
print(round(sqrt(s2), 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:00:34) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = round(sum(vet/size(vet)), 3)

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
s2 = sum(vet) / (size(vet) - 1)
 
print(round(sqrt(s2), 3))
-- EXECUTION TIME:
1.14256
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:01:19) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:01:31) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
vet
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- EXECUTION TIME:
1.17208
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:01:41) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:01:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

i = 0
for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	i = i + 1
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- EXECUTION TIME:
1.19436
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:01:56) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))


for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:02:03) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))


for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- EXECUTION TIME:
1.0823
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:02:44) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))


for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:03:05) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))


for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
print(vet)	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:03:36) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:03:49) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- EXECUTION TIME:
0.932558
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:03:59) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- EXECUTION TIME:
1.20288
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:04:34) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))



for i in range(size(vet)):
	vet[i] = (vet[i] - (sum(vet)/size(vet)) ** 2
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- ERROR:
File "XXXX", line 10
    d = sqrt(sum(vet) / (size(vet) - 1))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:04:40) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))



for i in range(size(vet)):
	vet[i] = (vet[i] - (sum(vet)/size(vet)) ** 2
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- ERROR:
File "XXXX", line 10
    d = sqrt(sum(vet) / (size(vet) - 1))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:04:45) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))



for i in range(size(vet)):
	vet[i] = (vet[i] - (sum(vet)/size(vet)) ** 2
	

d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- ERROR:
File "XXXX", line 11
    d = sqrt(sum(vet) / (size(vet) - 1))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:04:52) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:09:40) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:09:46) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
d = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- EXECUTION TIME:
1.0354
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:09:51) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
desvio = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(d, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:09:56) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
desvio = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:10:08) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
desvio = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:10:14) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
desvio = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(desvio, 3))
-- EXECUTION TIME:
1.15723
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:21:00) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
desvio = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:21:21) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet/size(vet))

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
desvio = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(desvio, 3))
-- EXECUTION TIME:
0.986303
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:22:03) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet)/size(vet)

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
desvio = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:22:10) 
-- CODE:
from numpy import*

vet = array(eval(input("Digite os valores: ")))

media = sum(vet)/size(vet)

for i in range(size(vet)):
	vet[i] = (vet[i] - media) ** 2
	
desvio = sqrt(sum(vet) / (size(vet) - 1))
 
print(round(desvio, 3))
-- EXECUTION TIME:
0.858758
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:28:33) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))

media = sum(x)/size(x)

for i in range(size(x)):
	x[i] = (x[i] - media) ** 2	
desvio = sqrt(sum(x) / (size(x) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:28:41) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))

media = sum(x)/size(x)

for i in range(size(x)):
	x[i] = (x[i] - media) ** 2	
desvio = sqrt(sum(x) / (size(x) - 1))
 
print(round(desvio, 3))
-- EXECUTION TIME:
0.865763
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:29:03) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))

media = sum(x)/size(x)

for i in range(size(x)):
	x[i] = (x[i] - media) ** 2	
print(x[i])
desvio = sqrt(sum(x) / (size(x) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:29:13) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))

media = sum(x)/size(x)

for i in range(size(x)):
	x[i] = (x[i] - media) ** 2	
print(x)
desvio = sqrt(sum(x) / (size(x) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:22:14) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))

media = sum(x)/size(x)

for i in range(size(x)):
	x[i] = (x[i] - media) ** 2	

desvio = sqrt(sum(x) / (size(x) - 1))
 
print(round(desvio, 3))
-- EXECUTION TIME:
1.0931
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 01:37:08) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))

media = sum(x)/size(x)

for i in range(size(x)):
	x[i] = (x[i] - media) ** 2	

desvio = sqrt(sum(x[i]) / (size(x) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:09:53) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))



for i in range(size(x)):
	x[i] = (x[i] - mean(x)) ** 2	

desvio = sqrt(sum(x) / (size(x) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 02:11:58) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))

media = mean(x)

for i in range(size(x)):
	x[i] = (x[i] - media) ** 2	

desvio = sqrt(sum(x) / (size(x) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 02:12:19) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))

media = mean(x)

for i in range(size(x)):
	x[i] = (x[i] - media) ** 2	

desvio = sqrt(sum(x) / (size(x) - 1))
 
print(round(desvio, 3))
-- EXECUTION TIME:
1.15174
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
Digite os valores: 0.29
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 02:13:48) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))

media = sum(x)/size(x)

for i in range(size(x)):
	x[i] = (x[i] - media) ** 2	

desvio = sqrt(sum(x) / (size(x) - 1))
 
print(round(desvio, 3))
-- EXECUTION TIME:
1.21699
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.494
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:58:14) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))
d = 0
media = sum(x)/size(x)

for i in range(size(x)):
	d = (x[i] - media) ** 2	
	d = d + 1
desvio = sqrt(d / (size(x) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:59:26) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))
d1 = 0
media = sum(x)/size(x)

for i in range(size(x)):
	d = (x[i] - media) ** 2	
	d1 = d1 + d 
desvio = sqrt(d / (size(x) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:59:34) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))
d1 = 0
media = sum(x)/size(x)

for i in range(size(x)):
	d = (x[i] - media) ** 2	
	d1 = d1 + d 
desvio = sqrt(d1 / (size(x) - 1))
 
print(round(desvio, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 13:59:44) 
-- CODE:
from numpy import*

x = array(eval(input("Digite os valores: ")))
d1 = 0
media = sum(x)/size(x)

for i in range(size(x)):
	d = (x[i] - media) ** 2	
	d1 = d1 + d 
desvio = sqrt(d1 / (size(x) - 1))
 
print(round(desvio, 3))
-- EXECUTION TIME:
0.811876
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
